src/k8s/_base/templates/coingecko-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
    network: mainnet
    release: live-mainnet-proxy
  name: live-mainnet-coingecko-proxy
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: proxy
    network: mainnet
    release: live-mainnet-proxy
