src/k8s/_base/templates/coingecko-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_301"},"Type":"redirect"}'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "30"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:eu-central-1:926093910549:regional/webacl/rate-limit-backend/07d554a1-0ac0-4799-9745-9ece4d409889
    external-dns.alpha.kubernetes.io/aws-region: eu-central-1
    external-dns.alpha.kubernetes.io/set-identifier: eu-central-1-live-mainnet-backend
  labels:
    app: proxy
    network: mainnet
    release: live-mainnet-proxy
  name: live-mainnet-coingecko-proxy
spec:
  ingressClassName: alb
  rules:
    - host: coingecko.live-mainnet.eks.lw.iog.io
      http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /
            pathType: Prefix
          - backend:
              service:
                name: live-mainnet-proxy
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - coingecko.live-mainnet.eks.lw.iog.io
